--- a/package.json
+++ b/package.json
@@ -3,8 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.98",
@@ -45,11 +43,16 @@
     "@babel/plugin-proposal-private-property-in-object": "7.21.0-placeholder-for-preset-env.2",
     "@eslint/compat": "^1.0.3",
     "@eslint/js": "^9.4.0",
+    "@testing-library/dom": "^10.1.0",
+    "@testing-library/jest-dom": "^6.4.5",
+    "@testing-library/react": "^16.0.0",
     "eslint": "^9.4.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-react": "^7.34.2",
     "globals": "^15.4.0",
+    "jest": "^29.7.0",
     "prettier": "3.3.1",
     "typescript-eslint": "^7.12.0"
-  }
+  },
+  "jest": {}
 }
